<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFB74D">

    <Button
        android:id="@+id/giveUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:fontFamily="@font/luckiest_guy"
        android:text="@string/give_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_animation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="24dp"
        android:fontFamily="@font/luckiest_guy"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="50sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_dice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/rollButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <it.dualcore.yahtzy.views.DiceButton
            android:id="@+id/dice0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1" />

        <it.dualcore.yahtzy.views.DiceButton
            android:id="@+id/dice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1" />

        <it.dualcore.yahtzy.views.DiceButton
            android:id="@+id/dice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1" />

        <it.dualcore.yahtzy.views.DiceButton
            android:id="@+id/dice3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1" />

        <it.dualcore.yahtzy.views.DiceButton
            android:id="@+id/dice4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:id="@+id/rollButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="@font/luckiest_guy"
        android:paddingVertical="16dp"
        android:text="@string/roll"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio=""
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="@font/luckiest_guy"
        android:paddingVertical="16dp"
        android:paddingTop="16dp"
        android:text="@string/sign"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/luckiest_guy"
        android:gravity="start|center_vertical"
        android:text="@string/str_tv_score"
        android:textAlignment="viewStart"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/giveUpButton"
        app:layout_constraintStart_toEndOf="@+id/giveUpButton"
        app:layout_constraintTop_toTopOf="@+id/giveUpButton" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TableLayout
        android:id="@+id/table"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"

        app:layout_constraintBottom_toTopOf="@+id/ll_dice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/giveUpButton">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical">


            <it.dualcore.yahtzy.views.ScoreView
                android:id="@+id/oneScore"
                app:scoreImage="@drawable/ic_table_one"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                app:scoreText="@string/one" />

            <it.dualcore.yahtzy.views.ScoreView
                android:id="@+id/threeOfAKindScore"
                app:scoreImage="@drawable/ic_table_threeofakind"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                app:scoreText="@string/three_of_a_kind" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <it.dualcore.yahtzy.views.ScoreView
                android:id="@+id/twoScore"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="8dp"
                app:scoreImage="@drawable/ic_table_two"
                android:layout_weight="1"
                app:scoreText="@string/two" />

            <it.dualcore.yahtzy.views.ScoreView
                android:id="@+id/fourOfAKindScore"
                app:scoreImage="@drawable/ic_table_fourofakind"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                app:scoreText="@string/four_of_a_kind" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical">

            <it.dualcore.yahtzy.views.ScoreView
                android:id="@+id/threeScore"
                app:scoreImage="@drawable/ic_table_three"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                app:scoreText="@string/three" />

            <it.dualcore.yahtzy.views.ScoreView
                android:id="@+id/smallStraightScore"
                app:scoreImage="@drawable/ic_table_smallstraight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                app:scoreText="@string/small_straight" />

        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <it.dualcore.yahtzy.views.ScoreView
                android:id="@+id/fourScore"
                app:scoreImage="@drawable/ic_table_four"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                app:scoreText="@string/four" />

            <it.dualcore.yahtzy.views.ScoreView
                android:id="@+id/largeStraightScore"
                app:scoreImage="@drawable/ic_table_largestraight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                app:scoreText="@string/large_straight" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical">

            <it.dualcore.yahtzy.views.ScoreView
                android:id="@+id/fiveScore"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                app:scoreImage="@drawable/ic_table_five"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                app:scoreText="@string/five" />

            <it.dualcore.yahtzy.views.ScoreView
                android:id="@+id/fullHouseScore"
                app:scoreImage="@drawable/ic_table_fullhouse"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                app:scoreText="@string/full_house" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <it.dualcore.yahtzy.views.ScoreView
                android:id="@+id/sixScore"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                app:scoreImage="@drawable/ic_table_six"
                app:scoreText="@string/six" />

            <it.dualcore.yahtzy.views.ScoreView
                android:id="@+id/yatzheeScore"
                app:scoreImage="@drawable/ic_table_yahtzee"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                app:scoreText="@string/app_name" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_bonus_US"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_vertical"
                    android:text="@string/bonus"
                    android:textColor="@color/colorAccentDark" />

                <ImageView
                    android:id="@+id/iv_ic_table_bonus"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:foreground="@drawable/ic_table_bonus"
                    android:foregroundGravity="center"
                    android:foregroundTint="@color/colorAccentDark"
                    tools:ignore="ContentDescription" />

                <it.dualcore.yahtzy.views.ScoreButton
                    android:id="@+id/bonus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:fontFamily="@font/luckiest_guy"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <it.dualcore.yahtzy.views.ScoreView
                android:id="@+id/chanceScore"
                app:scoreImage="@drawable/ic_table_chance"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                app:scoreText="@string/chance" />

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/tv_yahtzyBonusCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/luckiest_guy"
        android:textAlignment="viewStart"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/giveUpButton"
        app:layout_constraintEnd_toStartOf="@+id/instructionButtonGame"
        app:layout_constraintStart_toEndOf="@+id/tv_score"
        app:layout_constraintTop_toTopOf="@+id/giveUpButton" />

    <Button
        android:id="@+id/instructionButtonGame"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_help_blue_20dp"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/giveUpButton"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/giveUpButton" />

</android.support.constraint.ConstraintLayout>