<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView04"
        android:contentDescription="@string/dice"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:foreground="@drawable/ic_app_icon"
        android:foregroundTint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3333333"
        app:layout_constraintStart_toEndOf="@+id/space2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView03"
        android:contentDescription="@string/dice"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:foreground="@drawable/ic_app_icon"
        android:foregroundTint="@color/colorAccent"
        app:layout_constraintEnd_toStartOf="@+id/space2"
        app:layout_constraintHorizontal_bias="0.666666"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView01"
        android:layout_width="50dp"
        android:contentDescription="@string/dice"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:foreground="@drawable/ic_app_icon"
        android:foregroundTint="@color/colorAccent"
        app:layout_constraintEnd_toStartOf="@+id/imageView12"
        app:layout_constraintHorizontal_bias="0.3333"
        app:layout_constraintStart_toEndOf="@+id/space3"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView00"
        android:contentDescription="@string/dice"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:foreground="@drawable/ic_app_icon"
        android:foregroundTint="@color/colorAccent"
        app:layout_constraintEnd_toStartOf="@+id/space3"
        app:layout_constraintHorizontal_bias="0.666666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView10"
        android:contentDescription="@string/dice"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:foreground="@drawable/ic_app_icon"
        android:foregroundTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/space3"
        app:layout_constraintHorizontal_bias="0.666666"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView11"
        android:contentDescription="@string/dice"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:foreground="@drawable/ic_app_icon"
        android:foregroundTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView12"
        app:layout_constraintHorizontal_bias="0.3333"
        app:layout_constraintStart_toEndOf="@+id/space3" />

    <ImageView
        android:id="@+id/imageView13"
        android:contentDescription="@string/dice"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:foreground="@drawable/ic_app_icon"
        android:foregroundTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/space2"
        app:layout_constraintHorizontal_bias="0.666666"
        app:layout_constraintStart_toEndOf="@+id/imageView12" />

    <ImageView
        android:id="@+id/imageView14"
        android:contentDescription="@string/dice"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:foreground="@drawable/ic_app_icon"
        android:foregroundTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3333333"
        app:layout_constraintStart_toEndOf="@+id/space2" />

    <Button
        android:id="@+id/gameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="@font/luckiest_guy"
        android:includeFontPadding="true"
        android:padding="32dp"
        android:text="@string/start_game"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/luckiest_guy"
        android:paddingTop="16dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="73sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/scoreButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="@font/luckiest_guy"
        android:includeFontPadding="false"
        android:padding="32dp"
        android:text="@string/standings"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/gameButton"
        app:layout_constraintStart_toStartOf="@+id/gameButton"
        app:layout_constraintTop_toBottomOf="@+id/gameButton"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView02"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:foreground="@drawable/ic_app_icon"
        android:foregroundTint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/dice" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:foreground="@drawable/ic_app_icon"
        android:foregroundTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/dice"
        app:layout_constraintStart_toStartOf="parent" />

    <Space
        android:id="@+id/space3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/imageView12"
        app:layout_constraintEnd_toStartOf="@+id/imageView12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView12" />

    <Space
        android:id="@+id/space2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/imageView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintTop_toTopOf="@+id/imageView12" />

    <Button
        android:id="@+id/instructionButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_help_blue_20dp"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/imageView04"
        app:layout_constraintStart_toStartOf="@id/imageView04"
        app:layout_constraintTop_toBottomOf="@id/imageView04" />

</android.support.constraint.ConstraintLayout>